objects/Performance__x.object
<CustomObject>
    <fields>
        <fullName>PAYEEID__c</fullName>
        <description>PAYEEID</description>
        <externalDeveloperName>PAYEEID</externalDeveloperName>
        <label>Payee ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERIOD__c</fullName>
        <description>PERIOD</description>
        <externalDeveloperName>PERIOD</externalDeveloperName>
        <label>Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES__c</fullName>
        <description>SALES</description>
        <externalDeveloperName>SALES</externalDeveloperName>
        <inlineHelpText>SALES</inlineHelpText>
        <label>SALES</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TARGET__c</fullName>
        <description>TARGET__c</description>
        <externalDeveloperName>TARGET</externalDeveloperName>
        <inlineHelpText>TARGET__c</inlineHelpText>
        <label>TARGET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>